Tue Jun 16 16:09:59 2009  TAKANO Mitsuhiro (takano32)  <tak@no32.tk>

	* parse.y (parser_read_escape, parser_tokadd_escape): 
	  replace scan_oct as ruby_scan_oct.

Tue Jun 16 06:40:31 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (fptr_finalize): should close stdin/stdout/stderr when
	  closed explicitly.   [ruby-core:23853]

	* io.c (argf_skip): should close only when current_file is available.

Tue Jun 16 01:50:02 2009  Tanaka Akira  <akr@fsij.org>

	* vm_eval.c (rb_call0): refine exception message for hidden objects.

Mon Jun 15 22:35:31 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* bignum.c (rb_big2db): (-Float::MAX.to_i*2).to_f should return
	  -HUGE_VAL (-Infinity).

Mon Jun 15 18:48:41 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (argf_each_line): should return self.  [ruby-core:23852]

	* io.c (argf_each_byte, argf_each_char): ditto.

Mon Jun 15 17:48:42 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* gc.c (os_obj_of): invoke garbage collection before iteration, to
	  avoid accessing half recycled object references.  [ruby-dev:38613]

Mon Jun 15 11:04:30 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* .gdbinit (rp, iseq): load dummy_gdb_enums on demand.
	  [ruby-dev:38606]

Sun Jun 14 14:57:57 2009  Koichi Sasada  <ko1@atdot.net>

	* thread.c, vm_eval.c: add Thread.backtrace. 

	* test/ruby/test_thread.rb: add a test.

Sun Jun 14 13:58:32 2009  Koichi Sasada  <ko1@atdot.net>

	* transcode.c (transcode_restartable0): revert last commit because
	  this change cause SEGV at test-all.

Sun Jun 14 10:49:18 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_find_file_ext, rb_find_file): canonicalize absolute
	  paths.  [ruby-core:23845]

	* file.c (rb_file_size): added rdoc.  a patch from Run Paint Run
	  Run at [ruby-core:23839].

Sun Jun 14 07:53:26 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* complex.c (nucomp_fdiv): use fdiv recursively.

	* complex.c (nucomp_expt): reduced code.
