@@ -1,3 +1,7 @@
+Tue Jun 16 20:07:09 2009  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* transcode.c (transcode_restartable0): refix can't build with VC9.
+
 Tue Jun 16 16:09:59 2009  TAKANO Mitsuhiro (takano32)  <tak@no32.tk>
 
 	* parse.y (parser_read_escape, parser_tokadd_escape): 
